# videobin-bot

./: README.md  pyproject.toml
tests/: test_videobin_bot.py
videobin_bot/: __init__.py  __main__.py  bot.py  playlist.py
