[tool.poetry]
name = "videobin-bot"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hikari = "^2.0.0-alpha.105"
google-api-python-client = "^2.34.0"
google-auth = "^2.3.3"
google-auth-oauthlib = "^0.4.6"
google-auth-httplib2 = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
